--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   intl: ^0.19.0
   file_picker: ^10.3.8
   shared_preferences: ^2.2.2
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
