--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   shared_preferences: ^2.2.2
   http: ^1.2.2
   sqflite_common_ffi_web: ^1.1.0
+  wakelock_plus: ^1.2.8
 
 dev_dependencies:
   flutter_test:
