Update Word Quizzer app

--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -1,7 +1,7 @@
 name: vocab_master
 description: A new Flutter project.
 publish_to: 'none'
-version: 1.0.0+1
+version: 1.0.0+8
 
 environment:
   sdk: '>=3.2.0 <4.0.0'
@@ -22,6 +22,7 @@ dependencies:
   http: ^1.2.2
   sqflite_common_ffi_web: ^1.1.0
   wakelock_plus: ^1.2.8
+  package_info_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
